TestArchive/large_test/cycle_0028/build.err
perl: warning: Setting locale failed.
perl: warning: Please check that your locale settings:
	LANGUAGE = (unset),
	LC_ALL = (unset),
	LC_CTYPE = "C.UTF-8",
	LANG = "en_US.UTF-8"
    are supported and installed on your system.
perl: warning: Falling back to the standard locale ("C").
%Warning-UNOPTFLAT: /opt/module-fuzz/rewiring/large_test/cycle_0028/top.sv:43:12: Signal unoptimizable: Circular combinational logic: 'tb_top.dut.numbers_concat_repl_wrapper_in_flat'
   43 | wire [5:0] numbers_concat_repl_wrapper_in_flat;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    ... For warning description see https://verilator.org/warn/UNOPTFLAT?v=5.033
                    ... Use "/* verilator lint_off UNOPTFLAT */" and lint_on around source to disable this message.
                    /opt/module-fuzz/rewiring/large_test/cycle_0028/top.sv:43:12:      Example path: tb_top.dut.numbers_concat_repl_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/numbers_concat_repl_wrapper.sv:18:14:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0028/top.sv:44:13:      Example path: tb_top.dut.numbers_concat_repl_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0028/top.sv:201:42:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0028/top.sv:33:13:      Example path: tb_top.dut.const_nested_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/const_nested.sv:23:26:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/const_nested_wrapper.sv:18:14:      Example path: tb_top.dut.u_const_nested_wrapper.nested_c
                    /opt/module-fuzz/rewiring/large_test/cycle_0028/top.sv:123:41:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0028/top.sv:23:13:      Example path: tb_top.dut.const_arith_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/const_arith_wrapper.sv:20:14:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0028/top.sv:24:13:      Example path: tb_top.dut.const_arith_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0028/top.sv:255:49:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0028/top.sv:43:12:      Example path: tb_top.dut.numbers_concat_repl_wrapper_in_flat
%Error: Exiting due to 1 warning(s)
